# oyster

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  CACHING.md  CLAUDE.md  CLAUDE.md.template  Cargo.toml  Makefile  PLAN-62.md  README.md  bacon.toml  dune  dune-project  oystermark.opam
mdq/: Cargo.toml  README.md
mdq/src/: main.rs
mkq/: Cargo.toml  README.md
mkq/src/: main.rs
oyster/: Cargo.toml
oyster-lib/: Cargo.toml
oyster-lib/src/: cli.rs  lib.rs  parse.rs
oyster-lib/src/ast/: callout.rs  mod.rs  node.rs  tests.rs
oyster-lib/src/export/: snapshots.rs  utils.rs
oyster-lib/src/export/codeblock/: mermaid.rs
oyster-lib/src/export/styles/: base.css  callout.css
oyster-lib/src/export/styles/themes/: dracula.css  github-light.css  material-light.css
oyster-lib/src/link/: mod.rs  resolve.rs  types.rs
oyster-lib/src/query/snapshots/: oyster__query__parser__tests__test_build_md__build_md_with_sparse_headings.snap  oyster_lib__query__parser__tests__test_build_md__build_md.snap  oyster_lib__query__parser__tests__test_build_md__build_md_with_sparse_headings.snap
oyster-lib/tests/: test_embed_files.rs  test_extract_reference.rs  test_latex.rs  test_parse.rs  test_serve.rs
oyster-lib/tests/data/CHANGELOGs/Bender/: metadata.yml
oyster-lib/tests/data/CHANGELOGs/BetterThanWorldGen/: CHANGELOG.md
oyster-lib/tests/data/CHANGELOGs/DevOps-The-Hard-Way-Azure/: metadata.yml
oyster-lib/tests/data/CHANGELOGs/Elementalworld/: CHANGELOG.md
oyster-lib/tests/data/CHANGELOGs/WasmEdge/: CHANGELOG.md
oyster-lib/tests/data/CHANGELOGs/benchmark-templates/: metadata.yml
oyster-lib/tests/data/CHANGELOGs/cache/: CHANGELOG.md  metadata.yml
oyster-lib/tests/data/CHANGELOGs/curator/: CHANGELOG.md
oyster-lib/tests/data/CHANGELOGs/flow/: metadata.yml
oyster-lib/tests/data/CHANGELOGs/rust_hdl_vscode/: metadata.yml
oyster-lib/tests/data/CHANGELOGs/suttacentral/: metadata.yml
oyster-lib/tests/data/CHANGELOGs/vscode-formatting-toggle/: metadata.yml
oyster-lib/tests/data/notes/: callout.md  key_val_list.md  softbreak.md
oyster-lib/tests/data/vaults/diagrams/: tikz.md
oyster-lib/tests/data/vaults/embed_file/: note2.md  note_I.md  note_IV.md  note_IX.md  note_VII.md  note_a.md  note_b.md  note_embed_html.md  test.html
oyster-lib/tests/data/vaults/frontmatter/: article.md  complex-metadata.md  minimal.md
oyster-lib/tests/data/vaults/latex/: advanced-math.md  mixed-content.md
oyster-lib/tests/data/vaults/tt/: block.md
oyster/src/cli/: args.rs  mod.rs
oyster/src/cli/commands/: build.rs  query.rs  serve.rs
oyster/tests/: test_query_cli.rs
pkg/cmarkit/src/tool/: dune
pkg/mlmdx/examples/hello/: README.md  dune  greeting.mlx  hello.mlmdx  panel.mlx  render.ml  render.t
pkg/mlmdx/lib/: codegen.ml  codegen.mli  dune
pkg/mlmdx/pp/: dune  mlmdx_pp.ml  ocamlmerlin_mlmdx.ml
pkg/mlmdx/runtime/: components.ml  dune
pkg/oystermark/doc/: cmarkit-mapper-api.md  development.mld  dune  index.mld  index.mld.1of2  md_to_mld.ml  note_toc.ml  self-describing-code-exec.mld  self-describing-note-gen.mld
pkg/oystermark/doc/note/: .gitignore  dune  md_to_mld.ml
pkg/oystermark/doc/specification/: dune
pkg/oystermark/docs/: cmarkit-label-resolution.md  cmarkit-mapper-api.md  code-exec-cache-design.md  dune  index.mld
pkg/oystermark/docs/note/: dune
pkg/oystermark/docs/specification/: dune  pandoc-attribute.mld
pkg/oystermark/docs/utils/: dune
pkg/oystermark/lib/: block_id.ml  block_id.mli  callout_css.ml  callout_css.mli  code_executor.ml  component.ml  config.ml  css.ml  dune  graph_view.ml  graph_view.mli  html.ml  jupytext.ml  link_ref.ml  oystermark.ml  oystermark.mli  pipeline.ml  resolve.ml  theme.ml  vault_graph.ml  vault_graph.mli  vault_index.ml  wikilink.ml  wikilink.mli
pkg/oystermark/lib/base/: block_id.ml  dune  oystermark_base.ml  wikilink.ml
pkg/oystermark/lib/code_executor/: cache.ml  code_executor.ml  common.ml  dune  jupyter.ml  uv.ml
pkg/oystermark/lib/component/: component.ml  dune  html.ml
pkg/oystermark/lib/config/: config.ml  dune
pkg/oystermark/lib/parse/: attribute.ml  block_attribute.ml  block_id.ml  callout.ml  cb_attribute.ml  common.ml  div.ml  dune  extract.ml  frontmatter.ml  heading_slug.ml  index.mld  inline_attribute.ml  oy_attribute.ml  oy_wikilink.ml  parse.ml  struct.md  struct.ml  struct.mli  struct_common.ml  struct_for_test.ml  textloc_conv.ml  wikilink.ml
pkg/oystermark/lib/pipeline/: code_exec_.ml  common.ml  dune  on_discover.ml  on_parse.ml  pipeline.ml
pkg/oystermark/lib/pp_struct/: dune  pp_struct.ml  t1.expected  t1.expected.html  t1.ml
pkg/oystermark/lib/static/: Makefile  graph_view.js  theme.css
pkg/oystermark/lib/static/graph_view/: style.css  widget.css  widget.js
pkg/oystermark/lib/vault/: dune  embed.ml  index.ml  link_ref.ml  resolve.ml  resolve.mli  vault.ml
pkg/oystermark/lib/vault_graph/: common.ml  common.mli  dune  graph_view.ml  graph_view.mli  vault_graph.ml
pkg/oystermark/lib/vault_graph/static/: biome.json  config.d.ts  dune  fixtures.ts  graph_model.test.ts  graph_model.ts  package-lock.json  package.json  page.css  selector.test.ts  selector.ts  tsconfig.json  widget.css  widget.js  (+1 more)
pkg/oystermark/lsp/: CLAUDE.md  completion.ml  create_unresolved_note.ml  diagnostics.ml  document_outline.ml  dune  find_references.ml  go_to_definition.ml  hover.ml  inlay_hints.ml  link_collect.ml  lsp-tracing.mld  lsp.mld  lsp_config.ml  lsp_lib.ml  lsp_util.ml  main.ml  rename.ml  server.ml  server.mli  trace_collect.ml  tracking.mld
pkg/oystermark/lsp/docs/: design-260322-lsp.mld  design-index.mld  dune  feature-attribute-anchors.mld  feature-codeaction-create-unresolved-link.mld  feature-completion.mld  feature-diagnostics.mld  feature-document-outline.mld  feature-document-sync.mld  feature-find-references.mld  feature-go-to-definition.mld  feature-hover.mld  feature-index.mld  feature-inlay-hints.mld  feature-rename.mld  feature-utf16-positions.mld
pkg/trace-collect/: dune  index.mld  otlp_receiver.ml  span_pipeline.ml  test_trace.ml  trace_collect.ml  trace_pp.ml
(+258 files in other folders)
