[package]
name = "markdown-tools"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
ego-tree = "0.10.0"
itertools = "0.14.0"
katex = "0.4.6"
maud = "0.27.0"
minijinja = "2.12.0"
nonempty = "0.12.0"
pathdiff = "0.2.3"
percent-encoding = "2.3.2"
pulldown-cmark = "0.13.0"
pulldown-cmark-escape = "0.11.0"
regex = "1.12.2"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
similar = "2.7.0"
tempfile = "3.23.0"
tree-sitter = "0.25.9"
url = "2.5.7"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
rstest = "0.26.1"
