[package]
name = "mdq"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Query and extract data from Markdown files"
repository = "https://github.com/hon-gyu/oyster"

[dependencies]
oyster-lib = { path = "../oyster-lib" }
clap = { version = "4.5.48", features = ["derive"] }
serde_json = "1.0.149"
