[package]
name = "oyster-lib"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Markdown processing library with querying, bidirectional links, and HTML rendering"
repository = "https://github.com/hon-gyu/oyster"

[features]
serve = ["dep:tokio", "dep:axum", "dep:tower-livereload", "dep:notify-debouncer-mini", "dep:tower", "dep:tower-http"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
ego-tree = "0.10.0"
itertools = "0.14.0"
katex = "0.4.6"
maud = "0.27.0"
minijinja = "2.12.0"
nonempty = "0.12.0"
pathdiff = "0.2.3"
percent-encoding = "2.3.2"
pulldown-cmark = { version = "0.13.0", features = ["serde"] }
pulldown-cmark-escape = "0.11.0"
regex = "1.12.2"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
similar = "2.7.0"
tempfile = "3.23.0"
tree-sitter = "0.25.9"
url = "2.5.7"
serde_json = "1.0.149"

# Serve and watch (optional)
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.8", optional = true }
tower-livereload = { version = "0.9", optional = true }
notify-debouncer-mini = { version = "0.5", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
rstest = "0.26.1"
reqwest = { version = "0.12", features = ["blocking"] }
