[package]
name = "oyster"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Static site generator for Markdown with bidirectional links and HTML rendering"
repository = "https://github.com/hon-gyu/oyster"

[features]
default = []
serve = [
    "oyster-lib/serve",
    "dep:tokio",
    "dep:axum",
    "dep:tower-livereload",
    "dep:notify-debouncer-mini",
    "dep:tower-http",
    "dep:tempfile",
]

[dependencies]
oyster-lib = { path = "../oyster-lib", version = "0.1.0" }
clap = { version = "4.5.48", features = ["derive"] }
serde_json = "1.0.149"

# Serve dependencies (optional)
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.8", optional = true }
tower-livereload = { version = "0.9", optional = true }
notify-debouncer-mini = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
tempfile = { version = "3.23.0", optional = true }
