(library
 (name trace_collect)
 (public_name trace-collect)
 (modules otlp_receiver span_pipeline trace_collect trace_pp)
 (libraries
  core
  core_unix.core_thread
  core_unix
  opentelemetry
  opentelemetry.proto
  opentelemetry.trace
  pbrt
  trace.core
  ambient-context
  ambient-context.tls)
 (preprocess
  (pps ppx_jane ppx_string)))

(library
 (name trace_collect_test)
 (modules test_trace)
 (inline_tests)
 (libraries core trace_collect trace.core trace)
 (preprocess
  (pps ppx_jane ppx_string)))
