; mlmdx codegen: oymarkit Doc.t -> compiler-native Parsetree.structure.
; Depends only on the oymarkit parser and compiler-libs (no mlx, no html_of_jsx
; ppx): structural nodes become plain JSX.node/string/list calls, and embedded
; {expr} spans are parsed with the real OCaml parser on a position-primed lexbuf.

(library
 (name mlmdx_codegen)
 (libraries oymarkit.cmarkit compiler-libs.common)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))
