(executable
 (name md_to_mld)
 (libraries shexp.process core))

(executable
 (name note_toc)
 (libraries shexp.process core))

(rule
 ; (mode (promote (until-clean)))
 (action
  (with-stdout-to
   index.mld.2of2
   (run ./note_toc.exe))))

(rule
  (alias doc)
  (deps
    (:exe ./md_to_mld.exe))
  (action
    (progn
    (with-stdout-to
      code-exec-cache-design.mld
      (run %{exe} %{dep:code-exec-cache-design.md}))
    )))

(rule
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   index.mld
   (progn
    (cat index.mld.1of2)
    (cat index.mld.2of2)))))

(documentation)
