(rule
 (deps
  (source_tree note/))
 (action
  (with-stdout-to
   index.mld.2of2
   (run ./utils/note_toc.exe))))

(rule
 (alias doc)
 (deps
  (:exe ./utils/md_to_mld.exe))
 (action
  (progn
   (with-stdout-to
    code-exec-cache-design.mld
    (run %{exe} %{dep:code-exec-cache-design.md})))))

(rule
 (mode
  (promote (until-clean)))
 (action
  (with-stdout-to
   index.mld
   (progn
    (cat index.mld.1of2)
    (cat index.mld.2of2)))))

;; odoc builds one flat page namespace per package. Keep the authored pages in
;; their feature directories, but collect them beside the package index so one
;; documentation stanza owns the complete page graph.
(copy_files ../lsp/*.mld)
(copy_files ../lsp/docs/*.mld)
(copy_files note/*.mld)
(copy_files specification/*.mld)

(documentation
 (package oystermark)
 (mld_files
  index self-describing-note-gen code-exec-cache-design tracking
  design-260322-lsp design-260322-tracing design-index
  feature-attribute-anchors feature-codeaction-create-unresolved-link
  feature-completion feature-diagnostics feature-document-sync
  feature-find-references feature-go-to-definition feature-hover feature-index
  feature-inlay-hints feature-rename feature-utf16-positions
  cmarkit-label-resolution cmarkit-mapper-api pandoc-attribute))
