(library
 (name oystermark)
 (public_name oystermark)
 (libraries
  parse
  vault
  cmarkit
  core
  core_unix
  core_unix.filename_unix
  core_unix.sys_unix
  trace_collect
  tyxml
  yaml
  yojson)
 (inline_tests)
 (preprocessor_deps
  (file static/theme.css))
 (preprocess
  (pps ppx_jane ppx_string ppx_blob ppx_quick_test)))
