(library
 (name oystermark)
 (public_name oystermark)
 (libraries
  parse
  vault
  code_executor
  cmarkit
  core
  core_unix
  ocamlgraph
  core_unix.filename_unix
  core_unix.sys_unix
  trace_collect
  tyxml
  yaml
  yojson)
 (inline_tests)
 (preprocessor_deps
  (file static/theme.css)
  (file static/graph_view/widget.js)
  (file static/graph_view/style.css))
 (preprocess
  (pps ppx_jane ppx_string ppx_blob ppx_quick_test)))
