(library
 (name lsp_lib)
 (public_name oystermark.lsp_lib)
 (modules lsp_lib lsp_util go_to_definition)
 (libraries oystermark core trace.core)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_string)))

(executable
 (name main)
 (package oystermark)
 (public_name oystermark-lsp)
 (modules main)
 (libraries
  lsp_lib
  oystermark
  linol-eio
  eio_main
  opentelemetry.trace
  opentelemetry-client-cohttp-eio))

(documentation
 (package oystermark))
