(documentation)

(executable
 (name md_to_mld)
 (libraries shexp.process core))

(rule
 (mode
  (promote (until-clean)))
 (alias doc)
 (action
  (progn
   (with-stdout-to
    cmarkit-mapper-api.mld
    (run ./md_to_mld.exe %{dep:cmarkit-mapper-api.md}))
   (with-stdout-to
    cmarkit-label-resolution.mld
    (run ./md_to_mld.exe %{dep:cmarkit-label-resolution.md})))))
