(documentation
 (package oystermark))

(rule
 (mode
  (promote (until-clean)))
 (alias doc)
 (deps
  (:exe ../md_to_mld.exe))
 (action
  (progn
   (with-stdout-to
    cmarkit-mapper-api.mld
    (run %{exe} %{dep:cmarkit-mapper-api.md}))
   (with-stdout-to
    cmarkit-label-resolution.mld
    (run %{exe} %{dep:cmarkit-label-resolution.md})))))
