(library
  (name component)
  (public_name oystermark.component)
  (libraries
   parse
   vault
   code_executor
   cmarkit
   core
   core_unix
   ocamlgraph
   core_unix.filename_unix
   core_unix.sys_unix
   trace_collect
   tyxml
   yaml
   yojson)
  (inline_tests)
  (preprocess
   (pps ppx_jane ppx_string ppx_blob ppx_quick_test)
  )
)
