(library
 (name pp_struct)
 (public_name oystermark.pp_struct)
 (modules pp_struct)
 (libraries oymarkit core parse)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_string ppx_quick_test)))

(executable
 (name t1)
 (modules t1)
 (libraries oymarkit core parse component oystermark))

(rule
 (with-stdout-to
  t1.output
  (run ./t1.exe)))

(rule
 (alias runtest)
 (mode
  (promote (until-clean)))
 (action
  (diff t1.expected.html t1.output)))
