(library
 (name vault_graph)
 (public_name oystermark.vault_graph)
 (libraries
  parse
  vault
  cmarkit
  core
  ocamlgraph
  yojson)
 (inline_tests)
 (preprocessor_deps
  (file ../static/theme.css)
  (file ../static/graph_view/widget.js)
  (file ../static/graph_view/page.css)
  (file ../static/graph_view/widget.css))
 (preprocess
  (pps ppx_jane ppx_string ppx_blob ppx_quick_test)))
